--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 #spring.mvc.view.suffix=.html
 
 spring.mvc.view.suffix=.html
+spring.datasource.url=jdbc:postgresql://localhost:5432/student
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
