--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-#spring.mvc.view.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.enabled=false
 
-spring.mvc.view.suffix=.html
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 spring.datasource.url=jdbc:postgresql://localhost:5432/operations
 spring.datasource.username=postgres
 spring.datasource.password=admin
